--- a/HighSchool.html
+++ b/HighSchool.html
@@ -6,5 +6,5 @@
 Junior year is definitly one of the most stressful years. Now a little bit about my grades and stuff (so you could get  a general idea of the kind of student I am)
 <p>
 <strong>I</strong> care a lot about school but I know how to .. you know .. have somewhat of a social life. I am at the top-ish of my class, but I dont have straight straight A's. Junior year was crazy for me. I got my first C+, which crushed me but hey ... what can you do. I broke my middle finger. Had some boy troubles and made some new friends. I'd go more into detail but that's for next time. Final words of advice, grades aren't everything (but they're not nothing either)
-Try not to kill yourself because you get a bad grade or over some petty drama.
+Try not to drag yourself down because you get a bad grade or over some petty drama. Like at the end of the da, it happened, what can you do. :|
 </p>
